# RAG

./: .env.example  .gitignore  README.md  pyproject.toml
code/: config.py  main.py  requirements.txt
code/evals/: recipe_eval_set.jsonl  run_retrieval_eval.py
code/rag_modules/: __init__.py  data_preparation.py  document_ingestion.py  generation_integration.py  index_construction.py  response_schema.py  retrieval_optimization.py
code/tests/: test_config.py  test_data_preparation_smoke.py  test_document_ingestion.py  test_langchain_modernization.py  test_recipe_rag_system.py  test_response_schema.py  test_retrieval_eval.py
data/cook/aquatic/: 水煮鱼片.md  清蒸鲈鱼.md  红烧带鱼.md  蒜蓉粉丝虾.md  酸菜鱼.md  香煎三文鱼.md
data/cook/breakfast/: 小米粥.md  牛奶燕麦粥.md  葱油饼.md  蔬菜鸡蛋卷.md  虾仁云吞.md  豆浆.md  鸡蛋三明治.md
data/cook/condiment/: 万能葱油.md  照烧汁.md  糖醋汁.md  蒜蓉酱.md  麻辣红油.md
data/cook/dessert/: 双皮奶.md  姜撞奶.md  红豆沙.md  绿豆糕.md  芒果西米露.md  银耳莲子羹.md
evaluations/: __init__.py  run_retrieval_eval.py
evaluations/datasets/: campus_smoke_eval_set.jsonl
evaluations/results/: 2026-05-12-bm25-baseline.json  2026-05-12-vector-bm25-hybrid-summary.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx
src/campus_rag/: api.py  config.py  system.py
tests/api/: test_api.py
tests/evaluation/: test_retrieval_eval.py
tests/pipeline/: test_data_preparation_smoke.py  test_document_ingestion.py  test_langchain_modernization.py  test_response_schema.py
tests/system/: test_campus_rag_system.py  test_config.py  test_package_structure.py
(+58 files in other folders)
