[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-rag"
version = "1.0.0"
description = "Campus knowledge-base RAG service with CLI, FastAPI, retrieval evaluation, Chroma, and React web UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0,<2",
    "langchain-core>=1.0,<2",
    "langchain-community>=0.4,<1",
    "langchain-text-splitters>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "langchain-chroma>=1.0,<2",
    "rank_bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
    "openai>=1.86.0,<2.0.0",
    "pypdf>=4.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
campus-rag = "campus_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
